--- a/cards.html
+++ b/cards.html
@@ -17,6 +17,7 @@
     <link rel='stylesheet' href="static/css/footer.css">
     <link rel='stylesheet' href="static/css/media.css">
     <link rel='stylesheet' href="static/css/cards.css">
+
     <!--jQuery-->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -80,13 +81,19 @@
             <h3 class="lang" key="product__box__h3">Why choose pasture-raised products?</h3>
             <p class="lang" key="product__box__p">Here's a deep dive into the benefits</p>
         </div>
-        <div class="container">
-            <div class="product">
-                <img src="static/img/product-sample.jpg" alt="Product Title">
-                <h3>Product Title</h3>
-                <p class="price">Price in сом</p>
+        <div class="card__wrapper">
+            <div class="card">
+                <img class="card__img" src="static/img/card.jpg" alt="Product Title">
+                <h3 class="card__title">Atomic Habits</h3>
+                <div class="card__footer">
+                    <p class="card__price">1000 сом</p>
+                    <button class="card__btn"><img class="card__btn-img" src="static/img/cart.png" alt="cart"></button>
+                </div>
+
             </div>
+     
         </div>
+        
     </div>
     <footer>
         <div class="container">
