--- a/product.html
+++ b/product.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="static/img/logo.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href="static/css/reset.css"> 
     <link rel='stylesheet' href="static/css/product.css">
     <link rel='stylesheet' href="static/css/common.css">
     <link rel='stylesheet' href="static/css/burger.css">
@@ -75,11 +76,37 @@
             </div>
         </div>
     </header>
-    <div class="card">
-        <img src="" alt="">
-        <h3 class="card__title">HEADPHONES</h3>
-        <p class="card__author">Andrey Mihaylov</p>
-        <span class="card__price">50$</span>
+    <div class="product">
+        <div class="container">
+
+            <div class="product-wrapper">
+                <!-- <div class="product-category">
+                    
+                </div> -->
+                <div class="product-card">
+                    <img src="static/img/product1.jpg" alt="">
+                </div>     
+                <div class="product-desc">
+                    <h3 class="product-desc__title">Увлажнитель воздуха Xiaomi Mijia Humidifier 2</h3>
+                    <p class="product-desc__text">
+                        Лишь независимые государства неоднозначны и будут своевременно верифицированы. Задача организации, в особенности же глубокий уровень погружения требует от нас анализа глубокомысленных рассуждений. Идейные соображения высшего порядка, а также высокое качество позиционных исследований не даёт нам иного выбора, кроме определения вывода текущих активов. Банальные, но неопровержимые выводы, а также стремящиеся вытеснить традиционное производство, нанотехнологии лишь добавляют фракционных разногласий и описаны максимально подробно. Картельные сговоры не допускают ситуации, при которой элементы политического процесса освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, описаны максимально подробно.
+                    </p>
+                    <div class="product-price">
+                        <span class="product-price__money">2.900 сом</span>
+                        <button class="product-price__btn">В корзину</button>
+                    </div>
+                    <div class="product-desc__tel">
+                        <h3 class="product-desc__num-text">Возникли вопросы? Пиши</h3>
+                        <a class="product-desc__whatsup" href="https://wa.me/996550377580" target="_blank">+996550377580</a>
+                    </div>
+                    <div class="product-address">
+                        <h3 class="product-address__title">Наш адрес:</h3>
+                        <p class="product-address__street">Панфилова 90 (пересекает Кулатова )</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <footer>
         <div class="container">
